--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -39,30 +39,30 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
                                 <a class="nav-link {{ home_active }}" aria-current="page"
-                                    href="{{'/index' | relative_url}}">Home</a>
+                                    href="/">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {{ getting_started_active }}"
-                                    href="{{'/getting-started' | relative_url}}">Getting
+                                    href="{{'getting-started' | relative_url}}">Getting
                                     Started</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {{ installation_active }}"
-                                    href="{{'/installation' | relative_url}}">Installation</a>
+                                    href="{{'installation' | relative_url}}">Installation</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {{ usage_active }}" href="{{'usage' | relative_url}}">Usage</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {{ templates_active }}"
-                                    href="{{'/templates' | relative_url}}">Templates</a>
+                                    href="{{'templates' | relative_url}}">Templates</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {{ commands_active }}"
-                                    href="{{'/commands' | relative_url}}">Commands</a>
+                                    href="{{'commands' | relative_url}}">Commands</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link {{ faqs_active }}" href="{{ '/faqs' | relative_url}}">FAQs</a>
+                                <a class="nav-link {{ faqs_active }}" href="{{ 'faqs' | relative_url}}">FAQs</a>
                             </li>
                         </ul>
                     </div>
