--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -39,7 +39,7 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
                                 <a class="nav-link {{ home_active }}" aria-current="page"
-                                    href="/">Home</a>
+                                    href="{{'' | relative_url}}">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {{ getting_started_active }}"
