--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -71,7 +71,7 @@
         </nav>
     </header>
     <br>
-    <div class="main container-fluid p-4 m-4">
+    <div class="main container-fluid pt-4 pb-4 m-auto">
         <div class="container mt-4">
             {{ content }}
         </div>
