--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -71,7 +71,7 @@
         </nav>
     </header>
     <br>
-    <div class="main container-fluid pt-4 pb-4 mt-4">
+    <div class="main container-fluid pt-6 pb-4 mt-6 mt-6">
         {{ content }}
     </div>
     <br>
