--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -71,11 +71,11 @@
         </nav>
     </header>
     <br>
-    <div class="main container-fluid pt-6 pb-4 mt-6 mt-6">
+    <div class="main container-fluid pt-6 pb-4 m-auto">
         {{ content }}
     </div>
     <br>
-    <footer class="footer container-fluid fixed-bottom bg-light pt-1 mt-1 shadow-lg">
+    <footer class="footer container-fluid fixed-bottom bg-light pt-2 mt-1 shadow-lg">
         <p class="float-start">Copyright © 2024 Kartavya Shukla
             <a class="p-2 link" rel="noopener" target="_blank" href="https://github.com/Novfensec/KvDeveloper">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-github"
