--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -71,7 +71,8 @@
         </nav>
     </header>
     <br>
-    <div class="main container-fluid pt-6 pb-4 m-auto">
+    <div class="conatiner p-4"></div>
+    <div class="main container-fluid pt-3 pb-3 m-auto">
         {{ content }}
     </div>
     <br>
