--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -71,13 +71,16 @@
         </nav>
     </header>
     <br>
-    <div class="conatiner p-2"></div>
-    <div class="main container-fluid pt-2 pb-2 m-auto">
+    <div class="conatiner pt-6 pb-6"></div>
+    <div class="main container-fluid pt-6 pb-6 mb-6 mt-6">
+    <br>
         {{ content }}
     </div>
     <br>
-    <footer class="footer container-fluid fixed-bottom bg-light pt-2 mt-1 shadow-lg">
+    <footer class="footer container-fluid fixed-bottom pt-3 mt-3 bg-light shadow-lg">
+        <p class="float-end"><a href="#"> Back to top</a></p>
         <p class="float-start">Copyright © 2024 Kartavya Shukla
+            <br>
             <a class="p-2 link" rel="noopener" target="_blank" href="https://github.com/Novfensec/KvDeveloper">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-github"
                     viewBox="0 0 16 16">
@@ -109,7 +112,6 @@
                 </svg>
             </a>
         </p>
-        <p class="float-end"><a href="#"> Back to top</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
