--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -71,8 +71,8 @@
         </nav>
     </header>
     <br>
-    <div class="conatiner pt-6 pb-6"></div>
-    <div class="main container-fluid pt-6 pb-6 mb-6 mt-6">
+    <div class="conatiner p-5"></div>
+    <div class="main container-md" style="margin-top:6rem;margin-bottom:6rem;">
     <br>
         {{ content }}
     </div>
